[gd_scene load_steps=19 format=3 uid="uid://c4yufgahca7q6"]

[ext_resource type="Script" path="res://src/main/scene/ui/Scripts/shop_screen.gd" id="1_pbipd"]
[ext_resource type="Texture2D" uid="uid://dixlc2rmodb4v" path="res://src/main/assets/texture/role/Card/CardBackGround.png" id="2_ufwi0"]
[ext_resource type="Texture2D" uid="uid://byj4goebhxjah" path="res://src/main/assets/packs/16X16/Fantasy RPG icon pack (by Franuka)/Individual icons (32x32)/94.png" id="3_kejpe"]
[ext_resource type="PackedScene" uid="uid://dv66wrqma2aob" path="res://src/main/scene/ui/destroy_area.tscn" id="4_yq3w0"]
[ext_resource type="Script" path="res://src/main/common/classes/StateMachine.gd" id="5_m2vk7"]
[ext_resource type="PackedScene" uid="uid://27gthvyt5gcq" path="res://src/main/scene/ui/equipment_area.tscn" id="6_x1k12"]
[ext_resource type="AudioStream" uid="uid://brtqim2ykluws" path="res://src/main/assets/sound/SoundFX/coins_-_starninjas/coin.1.ogg" id="7_sgvc6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e6hit"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lsmbc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s7i7b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_64njr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ilo1i"]

[sub_resource type="Animation" id="Animation_2gvd1"]
length = 0.001

[sub_resource type="Animation" id="Animation_rk6ah"]
resource_name = "appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ShopAndInventory/Up/MarginContainer:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(570, -200), Vector2(570, 30), Vector2(570, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ShopAndInventory/Up/ShopCardsContainer:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(170, -200), Vector2(170, 30), Vector2(170, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Cards:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ofkxo"]
resource_name = "disappear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Cards:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ngcp6"]
_data = {
"RESET": SubResource("Animation_2gvd1"),
"appear": SubResource("Animation_rk6ah"),
"disappear": SubResource("Animation_ofkxo")
}

[sub_resource type="Animation" id="Animation_5vmt0"]
resource_name = "purchase"
length = 0.2
step = 0.05
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.2068,
"start_offset": 0.055,
"stream": ExtResource("7_sgvc6")
}],
"times": PackedFloat32Array(0)
}
tracks/0/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ms5bl"]
_data = {
"purchase": SubResource("Animation_5vmt0")
}

[node name="ShopScreen" type="Control"]
process_mode = 1
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 1
script = ExtResource("1_pbipd")

[node name="ShopAndInventory" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Up" type="Control" parent="ShopAndInventory"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="ShopAndInventory/Up"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 3130.0
offset_top = 30.0
offset_right = 3200.0
offset_bottom = 103.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 25

[node name="RefreshButton" type="Button" parent="ShopAndInventory/Up/MarginContainer"]
z_index = 100
custom_minimum_size = Vector2(45, 63)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxEmpty_e6hit")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lsmbc")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_s7i7b")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_64njr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_ilo1i")

[node name="TextureRect" type="TextureRect" parent="ShopAndInventory/Up/MarginContainer/RefreshButton"]
self_modulate = Color(1, 0.760784, 0.631373, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ufwi0")
expand_mode = 1
stretch_mode = 5

[node name="Icon" type="TextureRect" parent="ShopAndInventory/Up/MarginContainer/RefreshButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.5
offset_top = -16.5
offset_right = 16.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_kejpe")

[node name="ShopCardsContainer" type="MarginContainer" parent="ShopAndInventory/Up"]
custom_minimum_size = Vector2(300, 58)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 1450.0
offset_top = 30.0
offset_right = 1750.0
offset_bottom = 98.0
grow_horizontal = 2
theme_override_constants/margin_top = 10

[node name="PanelContainer" type="PanelContainer" parent="ShopAndInventory/Up/ShopCardsContainer"]
custom_minimum_size = Vector2(0, 58)
layout_mode = 2

[node name="Mid" type="Control" parent="ShopAndInventory"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="MarginContainer" type="MarginContainer" parent="ShopAndInventory/Mid"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -31.5
offset_bottom = 31.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 25

[node name="DestroyArea" parent="ShopAndInventory/Mid/MarginContainer" instance=ExtResource("4_yq3w0")]
layout_mode = 2

[node name="Down" type="Control" parent="ShopAndInventory"]
layout_mode = 2
size_flags_vertical = 3

[node name="InventoryCardsContainer" type="MarginContainer" parent="ShopAndInventory/Down"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 15

[node name="PanelContainer" type="PanelContainer" parent="ShopAndInventory/Down/InventoryCardsContainer"]
layout_mode = 2

[node name="Equipment" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="EquipmentArea0" parent="Equipment" groups=["EquipmentArea"] instance=ExtResource("6_x1k12")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -31.5
offset_right = 22.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentArea1" parent="Equipment" groups=["EquipmentArea"] instance=ExtResource("6_x1k12")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -31.5
offset_right = 22.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentArea2" parent="Equipment" groups=["EquipmentArea"] instance=ExtResource("6_x1k12")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -31.5
offset_right = 22.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentArea3" parent="Equipment" groups=["EquipmentArea"] instance=ExtResource("6_x1k12")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -31.5
offset_right = 22.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentArea4" parent="Equipment" groups=["EquipmentArea"] instance=ExtResource("6_x1k12")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -31.5
offset_right = 22.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentArea5" parent="Equipment" groups=["EquipmentArea"] instance=ExtResource("6_x1k12")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -31.5
offset_right = 22.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentArea6" parent="Equipment" groups=["EquipmentArea"] instance=ExtResource("6_x1k12")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -31.5
offset_right = 22.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentArea7" parent="Equipment" groups=["EquipmentArea"] instance=ExtResource("6_x1k12")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -31.5
offset_right = 22.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentArea8" parent="Equipment" groups=["EquipmentArea"] instance=ExtResource("6_x1k12")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -31.5
offset_right = 22.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="EquipmentArea9" parent="Equipment" groups=["EquipmentArea"] instance=ExtResource("6_x1k12")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -31.5
offset_right = 22.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2

[node name="Cards" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_m2vk7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ngcp6")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_polyphony = 10
bus = &"SFXBus"

[node name="VFXAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ms5bl")
}

[connection signal="pressed" from="ShopAndInventory/Up/MarginContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
